# canal

./: .clang-format  .env  CMakeLists.txt  Cargo.toml  README.md  network_stressor.py
.devcontainer/: Dockerfile  devcontainer.json
canal/: Cargo.toml  build.rs  controller.bpf.c  controller.c  rudp.h  simple.bpf.c  simple.c  xdp.bpf.c  xdp.c
canal-common/: Cargo.toml
canal-common/src/: lib.rs  rudp.rs
canal-ebpf/: Cargo.toml
canal-ebpf/src/: main.rs
canal-test/: Cargo.toml
canal-test/src/: main.rs
canal-user/: Cargo.toml
canal-user/src/: main.rs
canal/src/: lib.rs  main.rs  rudp_context.rs
xtask/src/: run.rs
